change id and value

--- a/src/views/clinic-panel/pages/add-clinic/clinic-services.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-services.ejs
@@ -31,28 +31,28 @@
             <div class="form-box">
               <div class="title">Diyaliz Tedavi Tipleri</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Hemodiyaliz" name="dialysisType" id="dialysisType" disabled checked />
-                <label class="form-check-label selected" for="dialysisType"> Hemodiyaliz </label>
+                <input class="form-check-input" type="checkbox" value="Hemodiyaliz" name="Hemodiyaliz" id="Hemodiyaliz" disabled checked />
+                <label class="form-check-label selected" for="Hemodiyaliz"> Hemodiyaliz </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Hemodiyafiltrasyon" name="dialysisType" id="dialysisType" />
-                <label class="form-check-label" for="dialysisType"> Hemodiyafiltrasyon </label>
+                <input class="form-check-input" type="checkbox" value="Hemodiyafiltrasyon" name="Hemodiyafiltrasyon" id="Hemodiyafiltrasyon" />
+                <label class="form-check-label" for="Hemodiyafiltrasyon"> Hemodiyafiltrasyon </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Merkezde Gece Hemodiyalizi" name="dialysisType" id="dialysisType" />
-                <label class="form-check-label" for="dialysisType"> Merkezde Gece Hemodiyalizi </label>
+                <input class="form-check-input" type="checkbox" value="Merkezde Gece Hemodiyalizi" name="nightHemodiyaliz" id="nightHemodiyaliz" />
+                <label class="form-check-label" for="nightHemodiyaliz"> Merkezde Gece Hemodiyalizi </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Ev Hemodiyalizi" name="dialysisType" id="dialysisType" />
-                <label class="form-check-label" for="dialysisType"> Ev Hemodiyalizi </label>
+                <input class="form-check-input" type="checkbox" value="Ev Hemodiyalizi" name="homeHemodiyaliz" id="homeHemodiyaliz" />
+                <label class="form-check-label" for="homeHemodiyaliz"> Ev Hemodiyalizi </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Hemşireli Ev Hemodiyalizi" name="dialysisType" id="dialysisType" />
-                <label class="form-check-label" for="dialysisType"> Hemşireli Ev Hemodiyalizi </label>
+                <input class="form-check-input" type="checkbox" value="Hemşireli Ev Hemodiyalizi" name="homeHemodiyalizNurse" id="homeHemodiyalizNurse" />
+                <label class="form-check-label" for="homeHemodiyalizNurse"> Hemşireli Ev Hemodiyalizi </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Periton Diyalizi" name="dialysisType" id="dialysisType" />
-                <label class="form-check-label" for="dialysisType"> Periton Diyalizi </label>
+                <input class="form-check-input" type="checkbox" value="Periton Diyalizi" name="peritonDialysis" id="peritonDialysis" />
+                <label class="form-check-label" for="peritonDialysis"> Periton Diyalizi </label>
               </div>
             </div>
             <div class="form-box">
@@ -62,43 +62,43 @@
                 <label class="form-check-label selected" for="inSessionService"> Seans İçi Yiyecek Sunumu </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Ücretsiz Ulaşım Hizmeti" name="inSessionService"  id="inSessionService" />
-                <label class="form-check-label" for="inSessionService"> Ücretsiz Ulaşım Hizmeti </label>
+                <input class="form-check-input" type="checkbox" value="Ücretsiz Ulaşım Hizmeti" name="transportService"  id="transportService" />
+                <label class="form-check-label" for="transportService"> Ücretsiz Ulaşım Hizmeti </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Kişiye Özel Tv Hizmeti" name="inSessionService"  id="inSessionService" />
-                <label class="form-check-label" for="inSessionService"> Kişiye Özel Tv Hizmeti </label>
+                <input class="form-check-input" type="checkbox" value="Kişiye Özel Tv Hizmeti" name="tvService"  id="tvService" />
+                <label class="form-check-label" for="tvService"> Kişiye Özel Tv Hizmeti </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Ücretsiz Wifi Hizmeti" name="inSessionService"  id="inSessionService" />
-                <label class="form-check-label" for="inSessionService"> Ücretsiz Wifi Hizmeti </label>
+                <input class="form-check-input" type="checkbox" value="Ücretsiz Wifi Hizmeti" name="freeWifi"  id="freeWifi" />
+                <label class="form-check-label" for="freeWifi"> Ücretsiz Wifi Hizmeti </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Tedavi Salonlarında Klima" name="inSessionService"  id="inSessionService" />
-                <label class="form-check-label" for="inSessionService"> Tedavi Salonlarında Klima </label>
+                <input class="form-check-input" type="checkbox" value="Tedavi Salonlarında Klima" name="climate"  id="climate" />
+                <label class="form-check-label" for="climate"> Tedavi Salonlarında Klima </label>
               </div>
             </div>
             <div class="form-box">
               <div class="title">Konuşulan Diller (Personel)</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Türkçe" name="languages" id="languages" checked />
-                <label class="form-check-label selected" for="languages"> Türkçe </label>
+                <input class="form-check-input" type="checkbox" value="Türkçe" name="turkish" id="turkish" checked />
+                <label class="form-check-label selected" for="turkish"> Türkçe </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="İngilizce" name="languages" id="languages" />
-                <label class="form-check-label" for="languages"> İngilizce </label>
+                <input class="form-check-input" type="checkbox" value="İngilizce" name="english" id="english" />
+                <label class="form-check-label" for="english"> İngilizce </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Rusça" name="languages" id="languages" />
-                <label class="form-check-label" for="languages"> Rusça </label>
+                <input class="form-check-input" type="checkbox" value="Rusça" name="russian" id="russian" />
+                <label class="form-check-label" for="russian"> Rusça </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Arapça" name="languages" id="languages" />
-                <label class="form-check-label" for="languages"> Arapça </label>
+                <input class="form-check-input" type="checkbox" value="Arapça" name="arabish" id="arabish" />
+                <label class="form-check-label" for="arabish"> Arapça </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="İspanyolca" name="languages" id="languages" />
-                <label class="form-check-label" for="languages"> İspanyolca </label>
+                <input class="form-check-input" type="checkbox" value="İspanyolca" name="spanish" id="spanish" />
+                <label class="form-check-label" for="spanish"> İspanyolca </label>
               </div>
               <div>
                 <a href="#" class="tm-link">Farklı bir dil eklemek için tıklayın</a>
@@ -111,8 +111,8 @@
                 <label class="form-check-label selected" for="interpreterPrice"> Ücretli </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Ücretsiz" name="interpreterPrice" id="interpreterPrice" />
-                <label class="form-check-label" for="interpreterPrice"> Ücretsiz </label>
+                <input class="form-check-input" type="radio" value="Ücretsiz" name="free" id="free" />
+                <label class="form-check-label" for="free"> Ücretsiz </label>
               </div>
             </div>
             <div class="tm-button-next left">
