--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -37,47 +37,47 @@
             <div class="form-box">
               <div class="title">Merkezimizdeki Görevi</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Nefroloji Uzmanı" name="employeeJob" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Nefroloji Uzmanı </label>
+                <input class="form-check-input" type="radio" value="Nefroloji Uzmanı" name="employeeJob" id="nefroloji" checked />
+                <label class="form-check-label selected" for="nefroloji"> Nefroloji Uzmanı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Mesul Müdür" name="employeeJob" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Mesul Müdür </label>
+                <input class="form-check-input" type="radio" value="Mesul Müdür" name="employeeJob" id="ceo" />
+                <label class="form-check-label" for="ceo"> Mesul Müdür </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Sorumlu Hekim" name="employeeJob" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Sorumlu Hekim </label>
+                <input class="form-check-input" type="radio" value="Sorumlu Hekim" name="employeeJob" id="responsibleDoctor" />
+                <label class="form-check-label" for="responsibleDoctor"> Sorumlu Hekim </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Merkez Başhemşiresi" name="employeeJob" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Merkez Başhemşiresi </label>
+                <input class="form-check-input" type="radio" value="Merkez Başhemşiresi" name="employeeJob" id="centerNurse" />
+                <label class="form-check-label" for="centerNurse"> Merkez Başhemşiresi </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Diyetisyen" name="employeeJob" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Diyetisyen </label>
+                <input class="form-check-input" type="radio" value="Diyetisyen" name="employeeJob" id="diyetisyen" />
+                <label class="form-check-label" for="diyetisyen"> Diyetisyen </label>
               </div>
             </div>
             <div class="form-box">
               <div class="title">Akademik Eğitim Durumunu Seçiniz</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Profesör" name="academicEducation" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Profesör </label>
+                <input class="form-check-input" type="radio" value="Profesör" name="academicEducation" id="proffessor" checked />
+                <label class="form-check-label selected" for="proffessor"> Profesör </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Uzman Hekim" name="academicEducation" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Uzman Hekim </label>
+                <input class="form-check-input" type="radio" value="Uzman Hekim" name="academicEducation" id="expertDoctor" />
+                <label class="form-check-label" for="expertDoctor"> Uzman Hekim </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Doktor" name="academicEducation" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Doktor </label>
+                <input class="form-check-input" type="radio" value="Doktor" name="academicEducation" id="doctor" />
+                <label class="form-check-label" for="doctor"> Doktor </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Hemşire" name="academicEducation" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Hemşire </label>
+                <input class="form-check-input" type="radio" value="Hemşire" name="academicEducation" id="nurse" />
+                <label class="form-check-label" for="nurse"> Hemşire </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="radio" value="Diyetisyen" name="academicEducation" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Diyetisyen </label>
+                <input class="form-check-input" type="radio" value="Diyetisyen" name="academicEducation" id="dietis" />
+                <label class="form-check-label" for="dietis"> Diyetisyen </label>
               </div>
             </div>
             <button type="button" class="btn" onclick="addPersonel()">Ekle</button>
