change id and value on doctor page

--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -80,14 +80,10 @@
                 <label class="form-check-label" for="dietis"> Diyetisyen </label>
               </div>
             </div>
-            <button type="button" class="btn" onclick="addPersonel()">Ekle</button>
+            <button type="button" class="btn btn-secondary" onclick="addPersonel()">Ekle</button>
             <div class="clinic-doctors">
               <div class="title">Sağlık Çalışanları</div>
               <ul id="clinic-doctor-list" name="personelList"></ul>
-              <!-- <div class="title">Sağlık Çalışanları</div>
-              <div class="text">Nefroloji Uzmanı: Prof. Dr. Gülçin Kantarcı</div>
-              <div class="text">Mesul Müdür: Dr. Mehtap Çelik Küçük</div>
-              <div class="text">Sorumlu Hekim: Dr. Tekbir Atay</div> -->
             </div>
             <div class="tm-button-next left">
               <a href="/panel/payment-option"
