change id and value

--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -82,7 +82,7 @@
             </div>
             <button type="button" class="btn btn-secondary" onclick="addPersonel()">Ekle</button>
             <div class="clinic-doctors">
-              <div class="title">Sağlık Çalışanları</div>
+              <div class="title mt-3">Sağlık Çalışanları</div>
               <ul id="clinic-doctor-list" name="personelList"></ul>
             </div>
             <div class="tm-button-next left">
