--- a/src/views/user/layouts/clinic-all-view.ejs
+++ b/src/views/user/layouts/clinic-all-view.ejs
@@ -12,7 +12,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-
   <title>Dialysing.com</title>
   <!-- Google web font "Open Sans" -->
   <link rel="stylesheet" href="../user/font-awesome-4.7.0/css/font-awesome.min.css" />
@@ -24,14 +23,14 @@
   <!-- Location -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="../user/css/select-sgk.css">
+  <!-- <link rel="stylesheet" href="../user/css/select-sgk.css"> -->
 </head>
 
 <body>
 
   <%- body %>
 
-    <script src="../user/js/selected-sgk.js"></script>
+    <!-- <script src="../user/js/selected-sgk.js"></script> -->
     <!-- Location -->
     <script src="../user/js/location.js"></script>
     <!-- Bootstrap 5 -->
