--- a/src/views/user/partials/top-navbar.ejs
+++ b/src/views/user/partials/top-navbar.ejs
@@ -65,8 +65,8 @@
         <li class="nav-item">
           <div class="dropdown select-lang mt-2">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="drop_yazı" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false"><img key="flag" src="../user/img/flags/turkey.png" width="25"
-                height="20" alt="Flags Turkey" /> Türkçe</button>
+              aria-haspopup="true" aria-expanded="false">
+              <img key="flag" src="../user/img/flags/turkey.png" width="25" height="20" alt="Flags Turkey" /> Türkçe</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" id="tr" href="#">
                 <div class="input-group select-lang"><img key="flag" src="../user/img/flags/turkey.png"
@@ -90,22 +90,30 @@
             <% if (!user) { %>
               <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Giriş Yap</button></li>
               <% } %>
-              <% if (user) { %>
-                <li class="nav-item buttons mt-2 mb-3 mx-0">
-                  <a class="nav-link" id="UserDropdown" data-bs-toggle="dropdown" aria-expanded="false"> 
-                    <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                  </svg></a>
-                  <div class="dropdown-menu dropdown-menu-right bg-dark navbar-dropdown mr-2 mt-0 text-white" aria-labelledby="UserDropdown">
-                    <div class="dropdown-header"> 
-                      <p class="text-white mb-0">Busra Ceval</p>
-                      <p class="fw-light text-muted text-white">ceval2772@gmail.com</p>
-                    </div> 
-                    <a class="dropdown-item mb-2 text-white" href="/user"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i>Profil</a> 
-                  </div>
-                </li>
-                <% } %>
+                <% if (user) { %>
+                  <li class="nav-item buttons mt-2 mb-3 mx-0">
+                    <a class="nav-link" id="UserDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                      <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                        fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                        <path fill-rule="evenodd"
+                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                      </svg></a>
+                    <div class="dropdown-menu dropdown-menu-right bg-dark navbar-dropdown mr-2 mt-0 text-white"
+                      aria-labelledby="UserDropdown">
+                      <div class="dropdown-header">
+                        <p class="text-white mb-0">Busra Ceval</p>
+                        <p class="fw-light text-muted text-white">ceval2772@gmail.com</p>
+                      </div>
+                      <a class="dropdown-item mb-2 text-white" href="/user"><i
+                          class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i>Profil</a>
+                    </div>
+                  </li>
+                  <% } %>
+                    <% if (user) { %>
+                      <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Çıkış Yap</button>
+                      </li>
+                      <% } %>
       </ul>
     </div>
   </div>
