--- a/public/user/css/clinic/style.css
+++ b/public/user/css/clinic/style.css
@@ -560,10 +560,9 @@ p {
 .tm-top-bar-bg {
   height: 119px;
 }
-.tm-section {
+/* .tm-section {
   min-height: 515px;
-}
-
+} */
 .tm-section-pad {
   padding-top: 80px;
   padding-bottom: 80px;
@@ -601,7 +600,6 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 .tm-background .tm-top-bar {
   background: unset;
 }
