--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -13,7 +13,7 @@
             <div class="tm-header-title"><span><%- city %> </span> Bölgesindeki Diyaliz Merkezleri</div>
             <div class="tm-header-text">Tarihlerinizi girin ve aradığınız lokasyona en yakın diyaliz merkezini bulun</div>
 
-            <form action="/clinic/clinic-list" method="GET" class="tm-search-form tm-section-pad-2">
+            <form action="/clinic/clinic-list" method="GET" class="tm-search-form pt-2">
               <div class="form-row tm-search-form-row">
                 <div class="form-group tm-form-element location-main">
                   <img src="../user/img/icons/location.png" class="tm-form-element-icon" alt="Icon Location" />
