--- a/src/views/user/pages/clinic/single-clinic.ejs
+++ b/src/views/user/pages/clinic/single-clinic.ejs
@@ -25,34 +25,58 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 clinic-images">
             <!-- TODO DEFAULT RESIM YUKLEME İŞLEMLERİ AŞAĞIDAKİ AYNI ŞEKİLDE YAPILACAK... -->
-            <% if (center.companyInformation.photo[0]) { %>
+            <!-- <% if (center.companyInformation.photo[0]) { %>
             <img src="<%- center.companyInformation.photo[0]%>" alt="Clinic Center iii" class="clinic-img" />
             <% }else{ %>
             <img src="../user/img/clinic/centers/clinic-iii.png" alt="Clinic Center iii" class="clinic-img" />
-            <% } %>
+            <% } %> -->
             <!-- TODO DEFAULT RESIM YUKLEME İŞLEMLERİ YUKARIDAKI AYNI ŞEKİLDE YAPILACAK... -->
             
-            <img src="<%- center.companyInformation.photo[0]  %> " class="left-second" alt="<%- center.companyInformation.companyName  %>" />
+            <!-- <img src="<%- center.companyInformation.photo[0]  %> " class="left-second" alt="<%- center.companyInformation.companyName  %>" /> -->
           </div>
-          <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 clinic-images">
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 clinic-images">
+            <% if (center.companyInformation.photo[0]) { %>
             <img src="<%- center.companyInformation.photo[0]  %> " class="right" alt="<%- center.companyInformation.companyName  %>" />
+            <% } else{ %>
+              <img src="../user/img/clinic/centers/clinic-iii.png" alt="Clinic Center iii" class="clinic-img" />
+            <% } %>
           </div>
         </div>
         <div class="sub-image row align-items-start mt-3">
           <div class="col">
+            <% if (center.companyInformation.photo[0]) { %>
             <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" alt="<%- center.companyInformation.companyName  %>" />
+            <% } else{ %>
+              <img src="../user/img/clinic/centers/clinic-iii.png" alt="Clinic Center iii" class="clinic-img" />
+            <% } %>
           </div>
           <div class="col">
-            <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" alt="<%- center.companyInformation.companyName  %>" />
+            <% if (center.companyInformation.photo[0]) { %>
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" alt="<%- center.companyInformation.companyName  %>" />
+              <% } else{ %>
+                <img src="../user/img/clinic/centers/clinic-iii.png" alt="Clinic Center iii" class="clinic-img" />
+              <% } %>
           </div>
           <div class="col">
+                        <% if (center.companyInformation.photo[0]) { %>
             <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" alt="<%- center.companyInformation.companyName  %>" />
+            <% } else{ %>
+              <img src="../user/img/clinic/centers/clinic-iii.png" alt="Clinic Center iii" class="clinic-img" />
+            <% } %>
           </div>
           <div class="col">
+                        <% if (center.companyInformation.photo[0]) { %>
             <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" alt="<%- center.companyInformation.companyName  %>" />
+            <% } else{ %>
+              <img src="../user/img/clinic/centers/clinic-iii.png" alt="Clinic Center iii" class="clinic-img" />
+            <% } %>
           </div>
           <div class="col">
+                        <% if (center.companyInformation.photo[0]) { %>
             <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" alt="<%- center.companyInformation.companyName  %>" />
+            <% } else{ %>
+              <img src="../user/img/clinic/centers/clinic-iii.png" alt="Clinic Center iii" class="clinic-img" />
+            <% } %>
           </div>
         </div>
 
