changing single clinic

--- a/src/views/user/pages/clinic/single-clinic.ejs
+++ b/src/views/user/pages/clinic/single-clinic.ejs
@@ -16,9 +16,7 @@
             <p class="tm-color-shadow"><i class="bi bi-geo-alt-fill"></i> <%- center.address.addressDetailText %></p>
           </div>
           <div class="flex-shrink-1 center-call">
-            <a href="tel:<%-center.contactInformation.phone %>"
-              ><p><i class="bi bi-telephone-fill"></i> Merkezi Ara</p></a
-            >
+            <a href="tel:<%-center.contactInformation.phone %>"><p><i class="bi bi-telephone-fill"></i> Merkezi Ara</p></a>
           </div>
         </div>
 
