--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <div id="section-i" class="tm-p tm-pt-20 tm-pb-20">
+  <div id="section-i" class="mt-5 tm-p tm-pt-20 tm-pb-20">
     <div class="container">
       <div class="row">
         <%- include("../../partials/filter") %>
