finished user navbar

--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -108,9 +108,11 @@
                       </div>
                     </li>
                     <% } %>
+                    <li class="nav-item buttons mt-2 mb-3 mx-0">
                     <% if (user) { %>
                      <button href="/logout" class="btn btn-logout">Çıkış Yap</button>
                     <% } %> 
+                    </li>
                   <!-- Modal -->
                   <div class="modal fade" id="loginModal" data-bs-backdrop="static" data-bs-keyboard="false"
                     tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
