--- a/src/views/user/partials/user-navbar.ejs
+++ b/src/views/user/partials/user-navbar.ejs
@@ -22,7 +22,6 @@
               </div>
             </div>
             <!-- end country row -->
-
             <!-- Şehir -->
             <div class="row">
               <div class="col-md-6 col-xs-6">
@@ -35,7 +34,6 @@
               </div>
             </div>
             <!-- end şehir row -->
-
             <!-- ilçe -->
             <div class="row">
               <div class="col-md-6 col-xs-6">
@@ -53,8 +51,7 @@
         </div>
       </div>
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-      <span><i class="bi bi-list"></i></span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation"><span><i class="bi bi-list"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarsExample07">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
@@ -64,26 +61,21 @@
             <button class="btn btn-secondary dropdown-toggle" type="button" id="drop_yazı" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <img key="flag" src="../user/img/flags/turkey.png" width="25" height="20" alt="Flags Turkey" /> Türkçe</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" id="tr" href="#"
-                ><div class="input-group select-lang"><img key="flag" src="../user/img/flags/turkey.png" alt="Flags Turkey" />Türkçe</div></a
-              >
-              <a class="dropdown-item" id="en" href="#"
-                ><div class="input-group select-lang"><img key="flag" src="../user/img/flags/en.png" alt="Flags Turkey" />English</div></a
-              >
+              <a class="dropdown-item" id="tr" href="#"><div class="input-group select-lang"><img key="flag" src="../user/img/flags/turkey.png" alt="Flags Turkey" />Türkçe<div></a>
+              <a class="dropdown-item" id="en" href="#">
+                <div class="input-group select-lang"><img key="flag" src="../user/img/flags/en.png" alt="Flags Turkey" />English</div></a>
             </div>
           </div>
         </li>
-        <!-- <li class="nav-item">
-          <a href="#" class="question nav-link mt-2"><i class="bi bi-question-circle"></i></a>
-        </li> -->
         <li class="nav-item"><button href="/clinic" class="nav-link btn-third btn-outline-light mx-2 mt-2">Merkezinizi Ekleyin</button></li>
         <% if (user) { %>
-          <li class="nav-item buttons mt-2 mx-0">
+          <li class="nav-item buttons mt-2 mx-2">
             <a class="nav-link" id="UserDropdown" data-bs-toggle="dropdown" aria-expanded="false"> 
               <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
               <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
               <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-            </svg></a>
+              </svg>
+            </a>
             <div class="dropdown-menu dropdown-menu-right bg-dark navbar-dropdown mt-0 text-white" aria-labelledby="UserDropdown">
               <div class="dropdown-header"> 
                 <p class="text-white mb-0">Busra Ceval</p>
