finish blog navbar

--- a/src/views/user/partials/top-navbar-blog.ejs
+++ b/src/views/user/partials/top-navbar-blog.ejs
@@ -2,7 +2,7 @@
     <!-- Top Navbar -->
     <div class="container">
         <div class="row">
-            <header class="d-flex flex-wrap justify-content-center my-5 py-3 mb-4">
+            <header class="d-flex flex-wrap justify-content-center mt-5 py-3 mb-2">
                 <a href="/"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none logo">Dialysing<span>.com</span></a>
 
@@ -47,7 +47,7 @@
                                             <p class="text-white mb-0">Busra Ceval</p>
                                             <p class="fw-light text-muted text-white">ceval2772@gmail.com</p>
                                         </div>
-                                        <a class="dropdown-item mb-2" href="/user"><i
+                                        <a class="dropdown-item mb-2 text-white" href="/user"><i
                                                 class="dropdown-item-icon mdi mdi-message-text-outline text-white me-2"></i>Profil</a>
                                     </div>
                                 </li>
