--- a/src/views/user/partials/navbar.ejs
+++ b/src/views/user/partials/navbar.ejs
@@ -1,109 +1,138 @@
-<div class="tm-top-bar" id="tm-top-bar">
+<div class="navbar-dark-thema">
   <!-- Top Navbar -->
   <div class="container">
     <div class="row">
-      <nav class="navbar navbar-expand-lg narbar-light">
-        <a class="navbar-brand logo mt-3 mb-3" href="/">Dialysing<span>.com</span> </a>
-        <a href="#" class="location mt-3 mb-3 mx-1"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i> <span id="location"></span></a>
-        <!-- Location Modal -->
-        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body select">
-                <!-- ülke -->
-                <div class="row">
-                  <div class="col-md-6 col-xs-6">
-                    <p><b>Ülkenizi Seçin</b></p>
-                  </div>
-                  <div class="col-md-6 col-xs-6 mb-3">
-                    <select id="country" class="form-control">
-                      <option value="">-- Ülke --</option>
-                    </select>
-                  </div>
+      <nav class="navbar navbar-expand-lg py-3">
+        <div class="container">
+          <a class="navbar-brand logo" href="/">Dialysing<span>.com</span> </a>
+          <a href="#" class="location mx-0"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i><span id="location"></span></a>
+          <!-- Location Modal -->
+          <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <!-- end country row -->
-
-                <!-- Şehir -->
-                <div class="row">
-                  <div class="col-md-6 col-xs-6">
-                    <p><b>Şehrinizi Seçin</b></p>
+                <div class="modal-body select">
+                  <!-- ülke -->
+                  <div class="row">
+                    <div class="col-md-6 col-xs-6">
+                      <p key="country"><b>Ülkenizi Seçin</b></p>
+                    </div>
+                    <div class="col-md-6 col-xs-6 mb-3">
+                      <select id="country" class="form-control">
+                        <option key="countr" value="">-- Ülke --</option>
+                      </select>
+                    </div>
                   </div>
-                  <div class="col-md-6 col-xs-6 mb-3">
-                    <select id="region" class="form-control">
-                      <option value="">-- İl --</option>
-                    </select>
+                  <!-- end country row -->
+                  <!-- Şehir -->
+                  <div class="row">
+                    <div class="col-md-6 col-xs-6">
+                      <p key="citySelect"><b>Şehrinizi Seçin</b></p>
+                    </div>
+                    <div class="col-md-6 col-xs-6 mb-3">
+                      <select id="region" class="form-control">
+                        <option key="cities" value="">-- İl --</option>
+                      </select>
+                    </div>
                   </div>
+                  <!-- end şehir row -->
+                  <!-- ilçe -->
+                  <div class="row">
+                    <div class="col-md-6 col-xs-6">
+                      <p key="districtSelect"><b>İlçenizi Seçin</b></p>
+                    </div>
+                    <div class="col-md-6 col-xs-6 mb-3">
+                      <select id="city" class="form-control">
+                        <option value="">-- İlçe --</option>
+                      </select>
+                    </div>
+                  </div>
+                  <!-- end ilçe row -->
+                  <button type="button" key="add" class="nav-link btn-second" data-bs-dismiss="modal">Ekle</button>
                 </div>
-                <!-- end şehir row -->
-
-                <!-- ilçe -->
-                <div class="row">
-                  <div class="col-md-6 col-xs-6">
-                    <p><b>İlçenizi Seçin</b></p>
-                  </div>
-                  <div class="col-md-6 col-xs-6 mb-3">
-                    <select id="city" class="form-control">
-                      <option value="">-- İlçe --</option>
-                    </select>
-                  </div>
-                </div>
-                <!-- end ilçe row -->
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ekle</button>
               </div>
             </div>
           </div>
-        </div>
-        <button type="button" id="nav-toggle" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#mainNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="mainNav" class="collapse navbar-collapse">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item language-selection mt-3 mb-3">
-              <img src="../user/img/flags/turkey.png" alt="Flags Turkey" />
-              <div class="tm-form-element tm-form-element-2">
-                <select name="language" class="form-control tm-select" id="language">
-                  <option value="">Türkçe</option>
-                  <option value="1">Ingilizce</option>
-                  <option value="2">Almanca</option>
-                </select>
-              </div>
-            </li>
-            <li class="nav-item question mt-3 mb-3">
-              <!-- <img src="../user/img/icons/question.png" alt="Icons Question" /> -->
-              <div class="is-clinic mr-3">Klinik Hesabınız Var Mı?</div>
-            </li>
-            <% if (user) { %>
-              <li class="nav-item buttons mt-3 mb-3 mx-0">
-                <a class="nav-link" id="UserDropdown" data-bs-toggle="dropdown" aria-expanded="false"> 
-                  <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
-                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                </svg></a>
-                <div class="dropdown-menu dropdown-menu-right bg-dark navbar-dropdown mt-0 text-white" aria-labelledby="UserDropdown">
-                  <div class="dropdown-header"> 
-                    <p class="text-white mb-0">Busra Ceval</p>
-                    <p class="fw-light text-muted text-white">ceval2772@gmail.com</p>
-                  </div> 
-                  <a class="dropdown-item mb-2" href="/user"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i>Profil</a> 
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#userNavBar" aria-controls="userNavBar" aria-expanded="false" aria-label="Toggle navigation"><span><i class="bi bi-list"></i></span>
+          </button>
+          <div class="collapse navbar-collapse" id="userNavBar">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+            <ul class="nav navbar-nav">
+              <li class="nav-item mt-1">
+                <div class="dropdown select-lang me-2 mt-2">
+                  <button class="btn btn-white text-white dropdown-toggle" type="button" id="drop_yazı" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img key="flag" src="../user/img/flags/turkey.png" width="25" height="20" alt="Flags Turkey" /> Türkçe</button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" id="tr" href="#"><div class="input-group select-lang"><img key="flag" src="../user/img/flags/turkey.png" alt="Flags Turkey" />Türkçe<div></a>
+                    <a class="dropdown-item" id="en" href="#">
+                      <div class="input-group select-lang"><img key="flag" src="../user/img/flags/en.png" alt="Flags Turkey" />English</div></a>
+                  </div>
                 </div>
               </li>
-              <% } %>
-            <li class="nav-item mt-3 mb-3">
-              <% if (!user) { %>
-              <a href="/panel/choose-personel" class="nav-link btn-third">Giriş Yap</a>
-              <% } %>
+              <li class="nav-item mt-3 mb-2"><div class="is-clinic me-3">Klinik Hesabınız Var Mı?</div></li>
               <% if (user) { %>
-                <a href="/logout" class="nav-link btn-third">Çıkış Yap</a>
+                <li class="nav-item buttons mt-2">
+                  <div class="dropdown">
+                    <a class="btn btn-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                      <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                        </svg>
+                    </a>
+                    <ul class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuLink">
+                      <li><p class="mx-2 text-white mb-0">Busra Ceval</p></li>
+                      <li><p class="fw-light text-muted mx-2 text-white">ceval2772@gmail.com</p></li>
+                      <li><a class="dropdown-item mb-2 text-white" href="/user"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i>Profil</a> </li>
+                    </ul>
+                  </div>
+                </li>
                 <% } %>
-            </li>
-          </ul>
+              <li class="nav-item"> 
+                <% if (!user) { %>
+                  <button type="button" class="nav-link btn-second mx-2 mt-2" data-toggle="modal"
+                      data-target="#loginModal">Giriş Yap</button>
+                  <% } %>
+                <% if (user) { %>
+                  <a href="/logout" class="nav-link btn-second mx-2 mt-2">Çıkış Yap</a>
+                <% } %>
+              </li> 
+            </ul>
+          </div>
         </div>
       </nav>
+      <!-- Modal Giriş Yap -->
+      <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <form class="tm-form tm-forms">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><img src="../user/img/icons/close.png" alt="Icon Close" /></button>
+                    <div class="form-title mt-5 text-center">Giriş Yap</div>
+                    <div class="form-group">
+                        <label for="login-email">Email Adresi</label>
+                        <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp"
+                            placeholder="Email Adresiniz">
+                    </div>
+                    <div class="form-group password">
+                        <label for="login-password">Şifrenizi Giriniz</label>
+                        <input type="password" class="form-control" id="login-password" placeholder="Şifreniz">
+                        <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+                    </div>
+                    <div class="links d-flex justify-content-between">
+                        <div class="form-group not-border checkbox">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                            <label class="form-check-label" for="flexCheckChecked"> Beni Hatırla </label>
+                        </div>
+                        <a href="#" class="password-forgot mt-2">Şifremi Unuttum</a>
+                    </div>
+                    <button type="submit" class="btn btn-second">Giriş Yap</button>
+                    <div class="link">Hesabınız ile birlikte,<a href="#"> Şartlar ve Koşullar ve Gizlilik
+                            Politikası & Kişisel Verilerin İşlenmesine</a> onay verilir.</div>
+                </form>
+            </div>
+        </div>
+    </div>
     </div>
   </div>
 </div>
