--- a/src/views/clinic-panel/pages/panel/index.ejs
+++ b/src/views/clinic-panel/pages/panel/index.ejs
@@ -15,30 +15,30 @@
           </div>
           <div class="row px-2">
             <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-4 clinic-images">
-              <img src="<%- center.companyInformation.photo[0]  %> " class="left-first mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" width="100%" height="50%" />
-              <img src="<%- center.companyInformation.photo[0]  %> " class="left-second mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" width="100%" height="50%" />
+              <!-- <img src="<%- center.companyInformation.photo[0]  %> " class="left-first mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" width="100%" height="50%" />
+              <img src="<%- center.companyInformation.photo[0]  %> " class="left-second mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" width="100%" height="50%" /> -->
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 mb-4 clinic-images">
-              <img src="<%- center.companyInformation.photo[0]  %> " class="right mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" width="100%" height="100%" />
-            </div>
-          </div>
-          <div class="sub-image row align-items-start mb-4 px-2">
-            <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
-            </div>
-            <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
-            </div>
-            <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
-            </div>
-            <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
-            </div>
-            <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
+            <div class="col-sm-12 col-md-12 col-lg-10 col-xl-10 mb-4 clinic-images">
+              <img src="<%- center.companyInformation.photo[0]  %> " class="right mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" width="100%" />
             </div>
           </div>
+          <!-- <div class="sub-image row align-items-start mb-4 px-1">
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
+            </div>
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
+            </div>
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
+            </div>
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
+            </div>
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
+            </div>
+          </div> -->
           <div class="tm-section-title tm-margin-t-2">Gelecek Rezervasyonlarınız</div>
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -84,7 +84,7 @@
               <div class="tm-process-bar-content">
                 <div>
                   <div class="tm-space-between">
-                    <div class="tm-process-title">Merkez Sayfası Puanı</div>
+                    <div class="tm-process-title"><a href="">Merkez Sayfası Puanı</a></div>
                     <div class="tm-process-subtitle">%60</div>
                   </div>
                   <div class="tm-process-pers"></div>
@@ -96,7 +96,7 @@
               </div>
             </div>
           </div>
-          <div class="tm-section-title tm-margin-t-1-5 mt-5">Merkezinizin Performansı</div>
+          <div class="tm-section-title mt-5">Merkezinizin Performansı</div>
           <div class="admin-box custom">
             <div class="admin-single-box">
               <div class="admin-single-title mx-1">Ortalama Aylık Hasta Sayısı</div>
