--- a/src/views/clinic-panel/pages/panel/properties-and-services.ejs
+++ b/src/views/clinic-panel/pages/panel/properties-and-services.ejs
@@ -2,7 +2,7 @@
   <div class="content-wrapper">
     <div id="section-i" class="tm-p">
       <div class="row">
-        <div class="tm-section-title">Özellİkler ve Hİzmetler</div>
+        <div class="tm-section-title">Özellikler ve Hizmetler</div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 mb-5">
           <form class="tm-form-wide">
             <div class="row">
@@ -145,9 +145,9 @@
                     <input class="form-check-input" type="checkbox" value="" id="language_sp" />
                     <label class="form-check-label" for="language_sp"> İspanyolca </label>
                   </div>
-                  <div class="tm-margin-t-1">
+                  <!-- <div class="tm-margin-t-1">
                     <a href="#">Farklı bir dil eklemek için tıklayın</a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -224,7 +224,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
           <div class="tm-box-info">
-            <div class="tm-box-top input-group">
+            <div class="tm-box-top d-flex justify-content-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Hizmetleri nelere göre işaretlemeliyim?</div>
             </div>
